# advent-of-code25

./: Cargo.toml  README.md  pyproject.toml
src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
src/py/: day1.py  day11.py  day3.py  day8.py  day9.py
